CI images update

--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-11 16:45:48
+lastsearch = 2024-07-11 17:52:36
 
 [burningman.org]
 match = -60.0%%
@@ -12,9 +12,9 @@ title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
-match = -66.7%%
-title = OLLIE 1- POINT TO THE TABLE- TRANG 10
-url = https://www.youtube.com/watch?v=2YbcRGD-gIg
+match = -60.0%%
+title = Let's Play Mega Man 10! (Part 1)
+url = https://www.youtube.com/watch?v=MM_vsEZTOV0
 
 [www.hcso.org]
 match = 7.7%%
@@ -309,7 +309,7 @@ url = https://www.tripadvisor.com/ShowUserReviews-g293928-d13388287-r887068402-T
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Johns_Hopkins_University
+url = https://en.wikipedia.org/wiki/FIFA_Men's_World_Ranking
 
 [status.epicgames.com]
 match = -33.3%%
