--- a/images/nem-sieu-nhe-180x200x05/config.ini
+++ b/images/nem-sieu-nhe-180x200x05/config.ini
@@ -3,3 +3,16 @@ path = nem-sieu-nhe-180x200x05
 url = https://www.diepxuan.com/nem-sieu-nhe-180x200x05.html
 lastopen = 2024-07-11 17:44:06
 
+[search]
+lastsearch = 2024-07-11 17:48:29
+
+[www.diepxuan.com]
+match = 34.8%%
+title = Nệm siêu nhẹ 100x190x05 - Điệp Xuân
+url = https://www.diepxuan.com/nem-sieu-nhe-100x190x05.html
+
+[nemkimtrang.com]
+match = -95.7%%
+title = Tấm lót, làm mềm nệm Topper Màu Edena - CHÍNH HÃNG ...
+url = https://nemkimtrang.com/tam-lot-lam-mem-nem-topper-edena-nhieu-mau
+
