--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-11 17:16:49
+lastsearch = 2024-07-11 17:50:40
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -133.3%%
-title = Siêu Thị Nệm - Nệm gấp 3 cao su tổng hợp Thái Lan ...
-url = https://www.facebook.com/sieuthinem/posts/nệm-gấp-3-cao-su-tổng-hợp-thái-lan-khuyến-mãi-giảm-giá-đặc-biệt-tại-wwwnemvn1giả/2342249222605666/
+match = -127.8%%
+title = Khay cuốn nem siêu tốc | KHAY CUỐN SIÊU TỐC | CUỐN ...
+url = https://www.facebook.com/ngoinhachichbong/videos/khay-cuốn-nem-siêu-tốc/1791938007504711/
 
 [thegioinem.com]
 match = 23.5%%
