--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-11 14:46:10
+lastsearch = 2024-07-11 18:11:37
 
 [chieutruc.info]
 match = -100.0%%
@@ -27,9 +27,9 @@ title = Mang thai 18 tuần nặng bao nhiêu cân để bé phát triển tốt
 url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html
 
 [www.vinmec.com]
-match = -95.5%%
-title = Chiều dài cổ tử cung thay đổi như thế nào trong suốt thai kỳ?
-url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/san-phu-khoa-va-ho-tro-sinh-san/chieu-dai-co-tu-cung-thay-doi-nhu-nao-trong-suot-thai-ky/
+match = 4.5%%
+title = Sự phát triển của thai nhi tuần 18
+url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/san-phu-khoa-va-ho-tro-sinh-san/su-phat-trien-cua-thai-nhi-tuan-18/
 
 [www.youtube.com]
 match = -109.1%%
