--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-07-11 17:52:04
+lastsearch = 2024-07-11 18:13:40
 
 [www.ncbi.nlm.nih.gov]
 match = -410.0%%
@@ -12,8 +12,8 @@ title = The Effect of Acupressure at PC6 and REN12 on Vomiting ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6542397/
 
 [www.healthline.com]
-match = -330.0%%
-title = Acupressure Points for Stomach Pain, Gas, and ...
+match = -400.0%%
+title = 5 Acupressure Points for Gas, Bloating, and Stomach Pain
 url = https://www.healthline.com/health/acupressure-points-for-gas
 
 [pubmed.ncbi.nlm.nih.gov]
@@ -150,4 +150,9 @@ url = https://quizlet.com/568037050/ren-acupuncture-points-flash-cards/
 match = -150.0%%
 title = City of Reno | Home - Reno.gov
 url = https://www.reno.gov/
+
+[www.crlibrary.org]
+match = -190.0%%
+title = Cedar Rapids Public Library: Home
+url = https://www.crlibrary.org/
 
