CI images update

--- a/images/man-tuynh-xanh-160x200/config.ini
+++ b/images/man-tuynh-xanh-160x200/config.ini
@@ -3,3 +3,36 @@ path = man-tuynh-xanh-160x200
 url = https://www.diepxuan.com/man-tuynh-xanh-160x200.html
 lastopen = 2024-07-11 17:09:34
 
+[search]
+lastsearch = 2024-07-11 18:34:04
+
+[demxanh.com]
+match = -100.0%%
+title = Chuyên phân phối màn tuyn, màn chụp cao cấp giá rẻ Hà ...
+url = https://demxanh.com/man-tuyn-man-chup.html
+
+[thegioidemonline.com]
+match = 13.6%%
+title = Màn tuyn 10.10 màu xanh không cửa
+url = https://thegioidemonline.com/man-tuyn-10.10-mau-xanh-khong-cua.html
+
+[www.entershopping.vn]
+match = -22.7%%
+title = Màn tuyn 10/10 không cửa màu xanh - Hà Nội
+url = http://www.entershopping.vn/man-tuyn-10-10-khong-cua-mau-xanh.html
+
+[www.lazada.vn]
+match = -63.6%%
+title = Màn Tuyn Lớn Giá Tốt T05/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/man-tuyn-lon/
+
+[everonvn.com.vn]
+match = -113.6%%
+title = [HOT ]Màn Khung Xếp Gọn Thông Minh Thế Hệ Mới Đẹp Nhất ...
+url = https://everonvn.com.vn/everon/781/man-khung-xep-gon-cao-cap-tien-loi
+
+[demhong.vn]
+match = 0.0%%
+title = Màn tuyn 10/10 cao cấp chính hãng
+url = https://demhong.vn/man-tuyn-10-10/
+
