--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-07-11 17:39:37
+lastsearch = 2024-07-11 18:26:33
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -12,8 +12,8 @@ title = Ga Đa Năng Chống Thấm
 url = http://www.dreamland.vn/Ga-Da-Nang-Chong-Tham-i4422.html
 
 [demdreamland.vn]
-match = -45.2%%
-title = Lưu trữ 200×220 - Trang 14 trên 21 ... - Đệm Dreamland
+match = -32.3%%
+title = Lưu trữ 200×220 - Trang 14 trên 21 - demdreamland
 url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 
 [demxanh.com]
@@ -22,8 +22,8 @@ title = Đệm bông ép Dreamland chống thoái hóa cột sống
 url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
 
 [dreamland.vn]
-match = -21.1%%
-title = Chăn Tuyết Điều Hòa
+match = -38.7%%
+title = Chăn Tuyết Điều Hòa - Chăn ga gối đệm cao cấp Dreamland
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
