--- a/images/nem-caosu-thang-loi-160x200x10/config.ini
+++ b/images/nem-caosu-thang-loi-160x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thang-loi-160x200x10.html
 lastopen = 2024-06-07 01:42:38
 
 [search]
-lastsearch = 2024-07-11 12:20:06
+lastsearch = 2024-07-11 18:28:10
 
 [congtynemthangloi.com]
 match = -46.7%%
@@ -13,13 +13,13 @@ url = https://congtynemthangloi.com/nem-cao-su-thien-nhien-thang-loi-va-bang-gia
 
 [khonemgiatot.vn]
 match = 33.3%%
-title = NỆM CAO SU GOLDLATEX THẮNG LỢI
-url = https://khonemgiatot.vn/nem-cao-su-goldlatex-thang-loi
+title = NỆM CAO SU NON THẮNG LỢI
+url = https://khonemgiatot.vn/nem-thang-loi-chinh-hang-100
 
 [nemcaosuthangloi.vn]
-match = 36.7%%
-title = NỆM CAO SU HOẠT TÍNH THẮNG LỢI
-url = https://nemcaosuthangloi.vn/nem-cao-su-hoat-tinh-thang-loi.html
+match = 22.7%%
+title = Nệm cao su thiên nhiên
+url = https://nemcaosuthangloi.vn/nem-cao-su-nem-cao-su-thien-nhien.html
 
 [noithatdaithanh.vn]
 match = 36.7%%
