CI images update

--- a/images/nem-foam-nami-150x190x15/config.ini
+++ b/images/nem-foam-nami-150x190x15/config.ini
@@ -3,3 +3,11 @@ path = nem-foam-nami-150x190x15
 url = https://www.diepxuan.com/nem-foam-nami-150x190x15.html
 lastopen = 2024-07-11 17:45:48
 
+[search]
+lastsearch = 2024-07-11 18:47:19
+
+[vuanem.com]
+match = -83.3%%
+title = Nệm foam chính hãng giá tốt nhất, mua đệm foam trả góp 0%%
+url = https://vuanem.com/nem/foam
+
