--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-11 17:14:14
+lastsearch = 2024-07-11 18:46:45
 
 [www.lazada.vn]
 match = -88.9%%
@@ -17,8 +17,8 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -200.0%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai ...
+match = -177.8%%
+title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
 url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [thegioinem.com]
@@ -27,9 +27,9 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.facebook.com]
-match = -83.3%%
-title = Hội người việt ở Kimhe (김해) | 𝐍𝐄𝐌 𝐂𝐇𝐔𝐀
-url = https://www.facebook.com/groups/2515164205371847/posts/𝐍𝐄𝐌-𝐂𝐇𝐔𝐀-𝐕𝐈𝐄̂𝐍-𝐌𝐈𝐍𝐈-𝐎̛́𝐓-𝐗𝐈𝐄̂𝐌-𝐗𝐀𝐍𝐇-14k-500gr-nem-ngon-kèm-ớt-xiêm-xanh-cực-kì-t/3776357239252531/
+match = -16.7%%
+title = NEM CUA BỂ VUÔNG SIÊU CHẤT LƯỢNG
+url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
 
 [eva.vn]
 match = -150.0%%
@@ -57,8 +57,8 @@ title = MỘT GÓC NEM CHUA RÁN XINH XẺO GIỮA LÒNG SÀI ...
 url = https://www.instagram.com/p/CltHti5L66x/
 
 [www.diepxuan.com]
-match = -55.6%%
-title = Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
+match = -111.1%%
+title = Điệp Xuân Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 
 [nemphuoclong.vn]
