CI images update

--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-11 15:36:12
+lastsearch = 2024-07-11 19:23:05
 
 [hoa18.com]
 match = -84.2%%
@@ -157,9 +157,9 @@ title = Soái Ca Comic – Truyện Tranh Online
 url = https://soaicacomic.top/
 
 [trithucvn.co]
-match = -110.5%%
-title = Những loại thực phẩm giải nhiệt tốt nhất vào mùa hè
-url = https://trithucvn.co/suc-khoe/nhung-loai-thuc-pham-giai-nhiet-tot-nhat-vao-mua-he.html
+match = -126.3%%
+title = Mỹ tăng thuế quan thép và nhôm từ Mexico nhằm ngăn ...
+url = https://trithucvn.co/kinh-te/my-tang-thue-quan-thep-va-nhom-tu-mexico-nham-ngan-trung-quoc-lach-thue.html
 
 [bptv.vn]
 match = -57.9%%
