--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-11 17:20:55
+lastsearch = 2024-07-11 19:23:57
 
 [www.youtube.com]
 match = -48.0%%
@@ -42,9 +42,9 @@ title = Doanh nhân Đài Loan bất ngờ qua đời khi muốn rút tài sản
 url = https://trithucvn.co/trung-quoc/doanh-nhan-dai-loan-bat-ngo-qua-doi-khi-muon-rut-tai-san-khoi-trung-quoc.html
 
 [books.google.com]
-match = -96.0%%
-title = Địa chí Tiền Giang - Volume 1 - Page 921 - Google Books Result
-url = https://books.google.com/books?id=bqQMAQAAMAAJ&pg=PA921&lpg=PA921&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=31InpLpkQn&sig=ACfU3U30_be7k_mLk87YhTdr2-dAsf8QAQ&hl=en&sa=X&ved=2ahUKEwjtuOn1gp6HAxXuFFkFHc7WDBQQ6AF6BAgVEAM
+match = -68.0%%
+title = Vĩ đại do lựa chọn - Page 234 - Google Books Result
+url = https://books.google.com/books?id=tV--EAAAQBAJ&pg=PA234&lpg=PA234&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=PE8HtZHAM7&sig=ACfU3U127M6JHM4DMkAV0LfxJYhFYXeAGg&hl=en&sa=X&ved=2ahUKEwjcmJCy_Z6HAxXkFlkFHYoFCDkQ6AF6BAgTEAM
 
 [www.skyscanner.com.vn]
 match = -80.0%%
