--- a/images/nem-foam-dreamland-uc-180x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-180x200x20/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-180x200x20.html
 lastopen = 2024-06-07 00:24:18
 
 [search]
-lastsearch = 2024-07-11 06:31:21
+lastsearch = 2024-07-11 19:23:28
 
 [www.diepxuan.com]
-match = 100.0%%
-title = Nệm Foam Dreamland Úc 180x200x20
-url = https://www.diepxuan.com/nem-foam-dreamland-uc-180x200x20.html
+match = 40.6%%
+title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [demxanh.com]
-match = -6.2%%
-title = Đệm bông ép Dreamland giá rẻ, chính hãng tại Hà Nội
-url = https://demxanh.com/dem-bong-ep-dreamland.html
+match = -31.2%%
+title = Nệm Dreamland có tốt không? Có nên sử dụng hay không?
+url = https://demxanh.com/nem-dreamland-co-tot-khong-co-nen-su-dung-hay-khong.html
 
 [changagoidemdep.vn]
 match = -12.5%%
@@ -22,14 +22,14 @@ title = [Cập nhật] Bảng giá đệm bông ép Dreamland năm 2022
 url = https://changagoidemdep.vn/bang-gia-dem-bong-ep-dreamland.html
 
 [shopee.vn]
-match = 3.1%%
-title = Đệm Memory Foam Massage Kawaii Dreamland
+match = -9.4%%
+title = Đệm Memory Foam Massage Kawaii Dreamland - Nệm.
 url = https://shopee.vn/Đệm-Memory-Foam-Massage-Kawaii-Dreamland-Nệm-Công-Thái-Học-Công-Nghệ-Japan-i.1090783225.24251489307
 
 [dreamfoambedding.com]
-match = -13.0%%
-title = Mattresses - Dream Foam
-url = https://dreamfoambedding.com/collections/mattresses
+match = 18.8%%
+title = Dreamfoam Doze Mattress - Dream Foam
+url = https://dreamfoambedding.com/products/dreamfoam-doze
 
 [nemgiahuy.com]
 match = 15.0%%
@@ -50,4 +50,19 @@ url = https://forum.mattressunderground.com/t/a-july-2013-review-of-the-dreamfoa
 match = -6.2%%
 title = Nuova Simonelli Oscar with Foam Knife 1?
 url = https://www.home-barista.com/espresso-machines/nuova-simonelli-oscar-with-foam-knife-1-t32073.html
+
+[demdreamland.vn]
+match = 12.5%%
+title = Đệm Dreamland Chính Hãng Giá Tốt Nhất
+url = https://demdreamland.vn/
+
+[thegioidemdep.com]
+match = -21.9%%
+title = Bảng Giá & Top 50+ Đệm bông ép Dreamland chính hãng ...
+url = https://thegioidemdep.com/dem-bong-ep-dreamland/
+
+[nemgiakho.com]
+match = -10.5%%
+title = Nệm Foam chính hãng
+url = https://nemgiakho.com/nem-foam
 
