--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-07-11 15:37:30
+lastsearch = 2024-07-11 19:31:28
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -42,9 +42,9 @@ title = Bộ chăn ga Everon SR-16
 url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 
 [www.diepxuan.com]
-match = -66.7%%
-title = Chăn ga gối xoa nhung - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/chan-ga-goi-xoa-nhung.html
+match = -33.3%%
+title = Bộ ga gối chun xoa 16 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 
 [everon365.vn]
 match = 33.3%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối everon ES1816
 url = https://everon365.vn/bo-chan-ga-goi-everon-es-1816.html
 
 [shopee.vn]
-match = -47.6%%
-title = ga gối cotton xoa nhung đám cưới hồng mvdv16
-url = https://shopee.vn/search?keyword=ga gối cotton xoa nhung đám cưới hồng mvdv16
+match = -104.8%%
+title = Bộ ga gối trần bông phi lụa 3 món ga chun ga trải giường ...
+url = https://shopee.vn/Bộ-ga-gối-trần-bông-phi-lụa-3-món-ga-chun-ga-trải-giường-cao-cấp-bô-1-mầu-nhiều-kích-thước-kèm-2-vỏ-gối-i.59917031.8026211533
 
 [runa.vn]
 match = -4.8%%
