--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-11 17:19:05
+lastsearch = 2024-07-11 19:30:12
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -212.5%%
-title = [TV] Gấm Kami VS Uyên Phương | GIẢI POOL 9 BI HBSF II ...
-url = https://www.youtube.com/watch?v=Ir7sFOF1oOY
+match = -162.5%%
+title = DÂN CA TRỮ TÌNH MIỀN TÂY HAY ĐẮM ĐUỐI -LK Nhạc Dân ...
+url = https://www.youtube.com/watch?v=YprMSuMId3Q
 
 [hawater.com.vn]
 match = -75.0%%
