--- a/images/chieu-truc-que-lam-ii-180x200/config.ini
+++ b/images/chieu-truc-que-lam-ii-180x200/config.ini
@@ -3,3 +3,31 @@ path = chieu-truc-que-lam-ii-180x200
 url = https://www.diepxuan.com/chieu-truc-que-lam-ii-180x200.html
 lastopen = 2024-07-11 19:17:10
 
+[search]
+lastsearch = 2024-07-11 19:31:39
+
+[thegioidemviet.vn]
+match = 20.7%%
+title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
+url = https://thegioidemviet.vn/chieu-truc/
+
+[chieutrelanlan.com]
+match = 23.8%%
+title = Chiếu trúc không viền
+url = https://chieutrelanlan.com/sản-phẩm/chiếu+trúc+không+viền/1.html
+
+[www.diepxuan.com]
+match = 48.3%%
+title = Chiếu trúc Quế Lâm II 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-truc-que-lam-ii-150x190.html
+
+[www.sendo.vn]
+match = -3.4%%
+title = Chiếu Trúc Hạt Loại Một Giá Cực Rẻ Nên Mua Ở Đâu
+url = https://www.sendo.vn/chieu-truc-hat.htm
+
+[demxanh.com]
+match = 24.1%%
+title = Chiếu trúc hạt Hương Trúc nâu cà phê
+url = https://demxanh.com/chieu-truc-hat-huong-truc-nau.html
+
