--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-07-11 17:13:06
+lastsearch = 2024-07-11 20:02:52
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -19,12 +19,12 @@ url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-063
 [everon.online]
 match = 50.0%%
 title = Bộ Ga Chun Chần Everon Bốn Mùa ...
-url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
+url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
 match = 23.5%%
-title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH08
-url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh08
+title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH05
+url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh05
 
 [shopee.vn]
 match = 50.0%%
@@ -33,8 +33,8 @@ url = https://shopee.vn/Bộ-ga-chun-chần-bốn-mùa-EVERON-180*200-ESTR-23054
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon EPM-22072 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22072.html
+title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
 
 [everonchinhhang.vn]
 match = 0.0%%
