--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-11 11:41:06
+lastsearch = 2024-07-11 19:58:38
 
 [www.diepxuan.com]
 match = -13.3%%
@@ -132,9 +132,9 @@ title = The Bodog Group|Nơi Cá Cược Casino Hàng Đầu Châu Á
 url = https://hawater.com.vn/bmw769346.xhtm
 
 [vietnamese.alibaba.com]
-match = -186.7%%
-title = HT-15 15 Chiều Vỏ Bọc ABS Hộp Phân Phối Điện Chống ...
-url = https://vietnamese.alibaba.com/product-detail/HT-15-15way-ABS-Enclosures-PC-1600704462390.html
+match = -153.3%%
+title = Chiều Cao HT-M15-3 220V Nhựa Bể Nước Chuyển Đổi ...
+url = https://vietnamese.alibaba.com/product-detail/HEIGHT-HT-M15-3-220v-Plastic-60724422925.html
 
 [congnghehoangtien.com]
 match = -160.0%%
