--- a/images/nem-caosu-lien-a-classic-180x200x10/config.ini
+++ b/images/nem-caosu-lien-a-classic-180x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
 lastopen = 2024-07-07 18:25:44
 
 [search]
-lastsearch = 2024-07-11 16:19:07
+lastsearch = 2024-07-11 20:01:27
 
 [nemgiakho.com]
 match = 8.6%%
@@ -70,4 +70,9 @@ url = https://www.thegioinemvip.com/bang-gia-nem-lien-a-khuyen-mai-moi-nhat.html
 match = 68.6%%
 title = Đệm cao su Liên Á Classic 180x200x10cm - Nệm.
 url = https://shopee.vn/Đệm-cao-su-Liên-Á-Classic-180x200x10cm-CHÍNH-HÃNG-BẢO-HÀNH-10-NĂM-i.37605375.9166502745
+
+[thegioinem.com]
+match = 8.6%%
+title = Bảng Giá Nệm Cao Su Liên Á Khuyến Mãi Mới Nhất 2024
+url = https://thegioinem.com/bang-gia-nem-cao-su-lien-a.html
 
