--- a/images/nem-sieu-nhe-150x190x05/config.ini
+++ b/images/nem-sieu-nhe-150x190x05/config.ini
@@ -3,3 +3,6 @@ path = nem-sieu-nhe-150x190x05
 url = https://www.diepxuan.com/nem-sieu-nhe-150x190x05.html
 lastopen = 2024-07-11 18:25:59
 
+[search]
+lastsearch = 2024-07-11 20:04:12
+
