--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-11 12:52:46
+lastsearch = 2024-07-11 20:24:03
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -52,9 +52,9 @@ title = South China Sea
 url = https://en.wikipedia.org/wiki/South_China_Sea
 
 [books.google.com]
-match = -91.3%%
-title = Advances in Geospatial Technology in Mining and Earth ...
-url = https://books.google.com/books?id=BTOxEAAAQBAJ&pg=PA402&lpg=PA402&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=MqhWcpcAiS&sig=ACfU3U2wsDwaXyHp0RAThyqUBvcBzaJ14Q&hl=en&sa=X&ved=2ahUKEwiE8_ijl_yGAxWLFVkFHQr6AG4Q6AF6BAgoEAM
+match = -139.1%%
+title = Vietnam Travel Map Eighth Edition - Page 11 - Google Books Result
+url = https://books.google.com/books?id=ha6HCgAAQBAJ&pg=PA11&lpg=PA11&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=qAz0VcbaVv&sig=ACfU3U2ItaHYQlhpV55BZJE-uyjhOrKfsw&hl=en&sa=X&ved=2ahUKEwio07_pip-HAxUdJUQIHUF7BkgQ6AF6BAglEAM
 
 [www.travelweekly.com]
 match = -87.0%%
