--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-11 18:12:34
+lastsearch = 2024-07-11 20:27:31
 
 [shopee.vn]
-match = -33.3%%
-title = CHIẾU ĐIỀU HOÀ MÂY LOẠI 1 ĐỦ KÍCH THƯỚC , GIÁ TẠI ...
-url = https://shopee.vn/CHIẾU-ĐIỀU-HOÀ-MÂY-LOẠI-1-ĐỦ-KÍCH-THƯỚC-GIÁ-TẠI-XƯỞNG-SẢN-XUẤT--i.46360011.4028012766
+match = -54.2%%
+title = Chiếu điều hòa, sợi mây tổng hợp, loại 1 mặt sau dệt sợi tơ
+url = https://shopee.vn/Chiếu-điều-hòa-sợi-mây-tổng-hợp-loại-1-mặt-sau-dệt-sợi-tơ-i.953354676.19573140759
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -47,14 +47,14 @@ title = CHIẾU ĐIỀU HÒA NỘI ĐỊA NANJIREN 11-18
 url = https://lybalansieucute.com/chieu-dieu-hoa-noi-dia-nanjiren-11-18
 
 [suongtuyet.com]
-match = 4.2%%
-title = có nên sử dụng chiếu điều hòa không?
-url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
+match = -41.7%%
+title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
+url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [www.lazada.vn]
-match = -33.3%%
-title = Chiếu Mây Điều Hòa Hàng Xuất Khẩu Cao Cấp,Đủ kích cỡ
-url = https://www.lazada.vn/products/chieu-may-soi-nho-dieu-hoa-chieu-dieu-hoa-16-x-19m-chieu-may-dieu-hoa-hang-xuat-khau-cao-capdu-kich-co-chieu-du-lich-chieu-an-com-chieu-trai-giuong-i2106465649.html
+match = 8.3%%
+title = Chiếu Mây Điều Hòa Chiếu mát mùa hè. ...
+url = https://www.lazada.vn/products/chieu-may-dieu-hoa-chieu-mat-mua-he-chieu-dieu-hoa-16x-2m-loai-tot-thoang-khi-mat-ruoi-ben-dep-co-the-gap-gon-giup-ban-tan-huong-nhung-giay-phut-thu-gian-i517380866.html
 
 [ababy.com.vn]
 match = -4.2%%
