--- a/images/bo-ga-chun-chan-thhome-tencel-modal-160x200/config.ini
+++ b/images/bo-ga-chun-chan-thhome-tencel-modal-160x200/config.ini
@@ -3,3 +3,6 @@ path = bo-ga-chun-chan-thhome-tencel-modal-160x200
 url = https://www.diepxuan.com/bo-ga-chun-chan-thhome-tencel-modal-160x200.html
 lastopen = 2024-07-11 20:32:25
 
+[search]
+lastsearch = 2024-07-11 20:39:05
+
