--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-11 16:21:31
+lastsearch = 2024-07-11 20:30:02
 
 [www.instagram.com]
 match = -30.8%%
@@ -62,9 +62,9 @@ title = Centre for Learning Enhancement And Research :: About
 url = https://www.cuhk.edu.hk/clear/about/people.html
 
 [en.wikipedia.org]
-match = -15.4%%
-title = The Midnight After
-url = https://en.wikipedia.org/wiki/The_Midnight_After
+match = -11.1%%
+title = Yui Horie
+url = https://en.wikipedia.org/wiki/Yui_Horie
 
 [nursing.hku.hk]
 match = -161.5%%
