--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-07-11 17:38:48
+lastsearch = 2024-07-11 20:36:04
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -212,9 +212,9 @@ title = bang xep hang bong da vietnam-V6.7.8
 url = http://khanhbinh.tanuyen.binhduong.gov.vn/zop/bang-xep-hang-bong-da-vietnam.xhtm
 
 [www.instagram.com]
-match = 0.0%%
-title = Tống Khánh Linh (@tongkhanhlinhhh)
-url = https://www.instagram.com/tongkhanhlinhhh/?hl=en
+match = -21.4%%
+title = “Durian Ktis” Project with my besdongs 🫶🏻🧙🏻‍♀️✨ ...
+url = https://www.instagram.com/davdecore/p/C6dwaOvysfM/
 
 [dauthau.asia]
 match = -17.9%%
