--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-11 18:28:52
+lastsearch = 2024-07-11 20:35:15
 
 [www.youtube.com]
 match = -420.0%%
@@ -27,9 +27,9 @@ title = Mystery Champion REN-14 Compressor Pump
 url = https://www.garagejournal.com/forum/threads/mystery-champion-ren-14-compressor-pump.386871/
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Ren_(philosophy)
+match = -120.0%%
+title = List of acupuncture points
+url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [twitter.com]
 match = -430.0%%
@@ -123,7 +123,7 @@ url = https://vndb.org/v36279
 
 [cutiesai.itch.io]
 match = -240.0%%
-title = 14 Days With You by cutiesai - Itch.io
+title = 14 Days With You by cutiesai - itch.io
 url = https://cutiesai.itch.io/14dayswithyou
 
 [www.koha.net]
@@ -235,4 +235,9 @@ url = https://deijistudios.com/blogs/field-notes/good-energy
 match = -210.0%%
 title = The psychological dimension of Ren Mai
 url = https://go.gale.com/ps/i.do?id=GALE|A376509956&sid=googleScholar&v=2.1&it=r&linkaccess=abs&issn=01438042&p=HRCA&sw=w
+
+[acupunctureismylife.com]
+match = -130.0%%
+title = The Directing Vessel/ Ren Mai
+url = https://acupunctureismylife.com/the-directing-vessel-ren-mai/
 
