CI images update

--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-11 18:28:41
+lastsearch = 2024-07-11 20:48:04
 
 [screenrant.com]
 match = 0.0%%
@@ -385,4 +385,9 @@ url = https://education.nationalgeographic.org/resource/whopping-91-percent-plas
 match = -7.1%%
 title = The Old Man's 10%% Rule
 url = https://www.huntinfool.com/articles/topic/diy/the-old-mans-10-rule
+
+[evergreenrecreation.com]
+match = -21.4%%
+title = Ice Skating & Hockey
+url = https://evergreenrecreation.com/224/Ice-Skating-Hockey
 
