--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-11 17:50:18
+lastsearch = 2024-07-11 20:46:23
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,9 +12,9 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -35.3%%
-title = Can HOA come onto my property?
-url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
+match = -100.0%%
+title = Old man threw hands at HOA meeting : r/fuckHOA
+url = https://www.reddit.com/r/fuckHOA/comments/19743on/old_man_threw_hands_at_hoa_meeting/
 
 [www.quora.com]
 match = -164.7%%
@@ -352,9 +352,9 @@ title = buc anh dep - elle man - 18
 url = https://www.elleman.vn/van-hoa-giai-tri/buc-anh-dep-national-geographic-2018/attachment/screen-shot-2018-12-28-at-9-45-53-pm/
 
 [books.google.com]
-match = -217.6%%
-title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+18&source=bl&ots=2illQBA4_F&sig=ACfU3U11HZN7Cg11oy9nXMGAnK5IEGDCRA&hl=en&sa=X&ved=2ahUKEwi-n6Kr2pKHAxUjlI4IHWntAtkQ6AF6BAglEAM
+match = -105.9%%
+title = The Monthly Army List - Google Books Result
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP7&lpg=RA69-PP7&dq=man+in+hoa+dep+18&source=bl&ots=kbdlmc92lU&sig=ACfU3U1rQTklD1ST160clP0dJbrL9vw20w&hl=en&sa=X&ved=2ahUKEwisrN_oj5-HAxUc78kDHX6zA88Q6AF6BAggEAM
 
 [www.bankrate.com]
 match = 0.0%%
@@ -405,4 +405,14 @@ url = https://www.ksnlaw.com/blog/corporate-transparency-act-update1/
 match = 0.0%%
 title = 
 url = https://sofl.cooperatornews.com/article/qa-rules-for-live-in-boyfriend
+
+[hhlawoffice.com]
+match = 0.0%%
+title = 
+url = https://hhlawoffice.com/basics-of-colorado-homeowners-association-hoa-law/
+
+[www.justice.gov]
+match = -194.1%%
+title = Department of Justice | Homepage | United States Department ...
+url = https://www.justice.gov/
 
