--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-11 20:24:03
+lastsearch = 2024-07-11 22:15:30
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -52,9 +52,9 @@ title = South China Sea
 url = https://en.wikipedia.org/wiki/South_China_Sea
 
 [books.google.com]
-match = -139.1%%
-title = Vietnam Travel Map Eighth Edition - Page 11 - Google Books Result
-url = https://books.google.com/books?id=ha6HCgAAQBAJ&pg=PA11&lpg=PA11&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=qAz0VcbaVv&sig=ACfU3U2ItaHYQlhpV55BZJE-uyjhOrKfsw&hl=en&sa=X&ved=2ahUKEwio07_pip-HAxUdJUQIHUF7BkgQ6AF6BAglEAM
+match = -104.3%%
+title = A Household Atlas of the World: Containing Large Scale ...
+url = https://books.google.com/books?id=ne8wAQAAMAAJ&pg=PA138&lpg=PA138&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=-8w14qMJYt&sig=ACfU3U3CJVxPaxZZiR5irJKLJlJUKrsEjA&hl=en&sa=X&ved=2ahUKEwiKpa_eo5-HAxX8F1kFHR58DagQ6AF6BAgeEAM
 
 [www.travelweekly.com]
 match = -87.0%%
