--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-11 19:30:12
+lastsearch = 2024-07-11 22:17:09
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -162.5%%
-title = DÂN CA TRỮ TÌNH MIỀN TÂY HAY ĐẮM ĐUỐI -LK Nhạc Dân ...
-url = https://www.youtube.com/watch?v=YprMSuMId3Q
+match = -212.5%%
+title = [TV] Gấm Kami VS Uyên Phương | GIẢI POOL 9 BI HBSF II ...
+url = https://www.youtube.com/watch?v=Ir7sFOF1oOY
 
 [hawater.com.vn]
 match = -75.0%%
@@ -92,9 +92,9 @@ title = Chợ ma – dấu ấn nghề chiếu
 url = https://baotang.dongthap.gov.vn/di-san-van-hoa/cho-ma-dau-an-nghe-chieu-37.html
 
 [sv.ut.edu.vn]
-match = -75.0%%
-title = luật poker omaha-App Store5.93.517
-url = https://sv.ut.edu.vn/newsr4ru7ie5.html
+match = -125.0%%
+title = mega88 slot game–Apps on Google Play964.91.4
+url = https://sv.ut.edu.vn/newscowtl1.html
 
 [yamaha-motor.com.vn]
 match = -250.0%%
