--- a/images/ruot-nem-korea-180x200x09/config.ini
+++ b/images/ruot-nem-korea-180x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-180x200x09.html
 lastopen = 2024-06-11 23:29:58
 
 [search]
-lastsearch = 2024-07-11 21:50:53
+lastsearch = 2024-07-11 22:17:41
 
 [www.diepxuan.com]
 match = -12.0%%
@@ -12,9 +12,9 @@ title = Ruột nệm Korea 180x200x09 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/ruot-nem-korea-180x200x09.html
 
 [www.riotgames.com]
-match = 0.0%%
-title = 
-url = https://www.riotgames.com/en/news/korea-cultural-heritage-protection-project
+match = -84.0%%
+title = Seoul, Korea - Riot Games Global Offices & Job Openings
+url = https://www.riotgames.com/en/work-with-us/offices/seoul
 
 [www.linkedin.com]
 match = -56.0%%
@@ -22,9 +22,9 @@ title = How to get a job in Korea as a non-Korean (again)
 url = https://www.linkedin.com/pulse/how-get-job-korea-non-korean-again-ross-harman
 
 [www.youtube.com]
-match = -92.0%%
-title = Why North Korea’s dumping garbage on South Korea | About ...
-url = https://www.youtube.com/watch?v=SU3JMXEUtgg
+match = -72.0%%
+title = (German Phrase 33)@SonyYu “I am from Korea” in German
+url = https://www.youtube.com/watch?v=O9PvCvIBlAI
 
 [www.bbc.co.uk]
 match = 0.0%%
@@ -87,9 +87,9 @@ title =
 url = https://oec.world/en/profile/bilateral-country/kor/partner/deu
 
 [www.reddit.com]
-match = -24.0%%
-title = What german items are popular in Korea?
-url = https://www.reddit.com/r/korea/comments/o40qej/what_german_items_are_popular_in_korea/
+match = -100.0%%
+title = Korean equivalent to Emergen-C and Tylenol? : r/koreatravel
+url = https://www.reddit.com/r/koreatravel/comments/12jl64t/korean_equivalent_to_emergenc_and_tylenol/
 
 [momotherose.com]
 match = -16.0%%
@@ -115,4 +115,14 @@ url = https://fgn.kics.go.kr/en/jsp/icp/penaltyPayment01.jsp
 match = 0.0%%
 title = 
 url = https://www.quora.com/Are-Koreans-allowed-to-marry-Africans-or-other-ethnicities
+
+[www.hellenicshippingnews.com]
+match = 0.0%%
+title = 
+url = https://www.hellenicshippingnews.com/germany-sees-a-like-minded-trade-ally-in-south-korea/
+
+[www.tripadvisor.ca]
+match = -88.0%%
+title = Bringing OTC medications & vitmain suplements into S ...
+url = https://www.tripadvisor.ca/ShowTopic-g294196-i8160-k14562473-Bringing_OTC_medications_vitmain_suplements_into_S_Korea-South_Korea.html
 
