--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-07-11 20:32:14
+lastsearch = 2024-07-11 22:29:33
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -12,9 +12,9 @@ title = Chiếu cây Đài Loan 140x190
 url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [dungcuykhoakimminh.com]
-match = 4.3%%
-title = Tìm kiếm từ khóa: serum
-url = https://dungcuykhoakimminh.com/tag/serum&trang-16
+match = 0.0%%
+title = Tìm kiếm từ khóa: LED
+url = https://dungcuykhoakimminh.com/tag/LED&trang-9
 
 [mych.vn]
 match = -60.7%%
@@ -27,9 +27,9 @@ title = lich bong da 14 6 【8XBET】lịch sử vô địch bóng đá nam ...
 url = https://xn--chiabngvngloiworldcupkhuvcchu-8nc3a50cm302fybaw6p.nigioivietnam.vn/
 
 [eva.vn]
-match = -53.6%%
-title = Hứa Vỹ Luân ra đi đã 14 năm, bạn trai đến giờ mới tìm ...
-url = https://eva.vn/sao-ngoai/hua-vy-luan-ra-di-da-14-nam-ban-trai-den-gio-moi-tim-duoc-tinh-yeu-c338a474175.html
+match = -50.0%%
+title = Trương Quốc Vinh ra đi đã 14 năm, Đường Hạc Đức vẫn ...
+url = https://eva.vn/lang-sao/truong-quoc-vinh-ra-di-da-14-nam-duong-hac-duc-van-khong-quen-sinh-nhat-nguoi-qua-co-c20a323522.html
 
 [cangvuhanghaithanhhoa.com.vn]
 match = -46.4%%
