--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-11 18:45:16
+lastsearch = 2024-07-11 22:33:08
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
-match = -131.2%%
-title = CHƯƠNG TRÌNH LỤC LẠC VÀNG VẾ VỚI XÃ MỸ THUẬN ...
-url = https://www.facebook.com/soctrangtv/videos/chương-trình-lục-lạc-vàng-vế-với-xã-mỹ-thuận-huyện-mỹ-tú-tỉnh-sóc-trăng-phát-són/1649583821733030/
+match = -218.8%%
+title = 08-06-2024 Thời sự chiều 18h30 | 08-06-2024 Thời sự chiều ...
+url = https://www.facebook.com/soctrangtv/videos/08-06-2024-thời-sự-chiều-18h30/840287204820537/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -143.8%%
-title = Vietstock Daily 12/07/2024: Tiếp tục rung lắc?
-url = https://vietstock.vn/2024/07/vietstock-daily-12072024-tiep-tuc-rung-lac-1636-1206743.htm
+match = -212.5%%
+title = Phân tích kỹ thuật phiên chiều 09/07: Tâm lý lạc quan dần ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-0907-tam-ly-lac-quan-dan-quay-lai-585-1205716.htm
 
 [baohungyen.vn]
 match = -200.0%%
