--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-07-11 20:32:26
+lastsearch = 2024-07-11 22:30:02
 
 [www.bible.com]
-match = -157.1%%
-title = EZEKIELA 16 | MIZOVBSI Bible | YouVersion
-url = https://www.bible.com/bible/253/EZK.16.MIZOVBSI
+match = -128.6%%
+title = MARKA 16 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/MRK.16.MIZCLBSI
 
 [tiki.vn]
 match = -171.4%%
@@ -72,9 +72,9 @@ title = Doktrin na ol Kavanen 22
 url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/22?lang=tpi
 
 [www.youtube.com]
-match = -200.0%%
-title = Hướng Dẫn Gấp Màn Chụp Tự Bung - Cách Gấp Màn Chụp ...
-url = https://www.youtube.com/watch?v=AEddlekH6zA
+match = -35.7%%
+title = Prom Krasimira - part 1
+url = https://www.youtube.com/watch?v=hgl2bPLMEPw
 
 [www.instagram.com]
 match = -257.1%%
@@ -135,4 +135,9 @@ url = https://m.facebook.com/inkhel/photos/breaking-semi-final-ah-france-portuga
 match = -21.4%%
 title = Màn Chụp Người Lớn Tự Bung
 url = https://tbmart.vn/san-pham/man-chup-nguoi-lon-tu-bung/
+
+[dipr.mizoram.gov.in]
+match = -285.7%%
+title = Minister Pi Lalrinpuii'n Mizo lal huaisen Zakapa Fanai nun ...
+url = https://dipr.mizoram.gov.in/post/minister-pi-lalrinpuiin-mizo-lal-huaisen-zakapa-fanai-nun-behchanna-siam-docu-drama-film-tlangzarh
 
