--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-11 21:51:01
+lastsearch = 2024-07-11 22:32:37
 
 [everonvn.com.vn]
 match = -11.1%%
@@ -12,8 +12,8 @@ title = Bộ Everon Ep1831 - Curtis
 url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
-match = -172.2%%
-title = 【Ready】⚡ Vỏ gối nằm vỏ gối đầu kích thước 45x65 được chọn ...
+match = -144.4%%
+title = 【Ready】⚡ Vỏ gối nằm vỏ gối đầu kích thước 45x65 được ...
 url = https://www.lazada.vn/products/ready-vo-goi-nam-vo-goi-dau-kich-thuoc-45x65-duoc-chon-mau-i2364886208.html
 
 [www.reddit.com]
@@ -37,13 +37,13 @@ title = Vỏ gối EP1823 BEARS 45x65 - Điệp Xuân
 url = https://www.diepxuan.com/vo-goi-ep1823-bears-45x65.html
 
 [www.everonqb.com]
-match = -38.9%%
-title = Everon Quảng Bình Vỏ gối EP1823 BEARS 45x65
+match = -105.6%%
+title = Vỏ gối EP1823 BEARS 45x65 - Everon Quảng Bình Trang Chủ
 url = https://www.everonqb.com/vo-goi-ep1823-bears-45x65.html
 
 [shopee.vn]
-match = -127.8%%
-title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ 3size
+match = -116.7%%
+title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ ...
 url = https://shopee.vn/product/146440345/13756241998?gsht=StznoKFCWptXK5Vt
 
 [sieuthicholon.com]
@@ -52,7 +52,7 @@ title = Vỏ gối nằm được bán bởi công ty Lidaco Official Store
 url = https://sieuthicholon.com/vo-goi-nam-23484/?cong-ty=lidaco-official-store
 
 [dienmayhc.com]
-match = -166.7%%
-title = Vỏ gối nằm được bán bởi người bán PHUCTHAI CHĂN GA GỐI ...
+match = -88.9%%
+title = Vỏ gối nằm được bán bởi PHUCTHAI CHĂN GA GỐI
 url = https://dienmayhc.com/vo-goi-nam-23452/?nguoi-ban=phucthai-chan-ga-goi
 
