CI images update

--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-11 18:29:35
+lastsearch = 2024-07-11 22:46:48
 
 [agasound.vn]
 match = 6.7%%
@@ -52,8 +52,8 @@ title = LineaBon D3K2 | Vitamin D3 K2 Tăng chiều cao hiệu quả cho ...
 url = https://www.lineabon.vn/product-page/lineabon-d3k2
 
 [www.diepxuan.com]
-match = 20.0%%
-title = Chiếu lác D2 12 - Điệp Xuân
+match = 33.3%%
+title = Điệp Xuân Chiếu lác D2 12
 url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
@@ -72,9 +72,9 @@ title = Tổng hợp 12 mạch điện điều khiển động cơ cơ bản
 url = https://www.thietbidiencongnghiep.com.vn/bai-viet/tong-hop-12-mach-dieu-khien-co-ban/
 
 [geniustools.vn]
-match = -66.7%%
-title = Đầu lắc léo 3/8" hệ inch 12 cạnh
-url = http://geniustools.vn/khau-564/dau-lac-leo-3-8-he-inch-12-canh-757
+match = -186.7%%
+title = Khẩu, tuýp 1/4 đầu lắc léo hệ mét 12 cạnh hãng Genius
+url = http://geniustools.vn/khau-560/dau-lac-leo-1-4-he-met-12-canh-682
 
 [dochoimamnon123.com]
 match = -240.0%%
@@ -82,9 +82,9 @@ title = D2 Cột Bóng rổ, Hầm chui, Vận động-Thể chất - Đồ chơ
 url = https://dochoimamnon123.com/d2-cot-bong-ro-ham-chui-van-dong-the-chat
 
 [m.facebook.com]
-match = -233.3%%
-title = Hãy bình thường hoá việc đi du lịch về không mua quà, đó ...
-url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1456227441707654/
+match = -113.3%%
+title = 12 kinh lạc và các huyệt đạo trên cơ thể
+url = https://m.facebook.com/ngocanhspa85mtl/videos/12-kinh-lạc-và-các-huyệt-đạo-trên-cơ-thể/1493169384068508/
 
 [vietnamairport.vn]
 match = -93.3%%
