--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-07-11 22:30:47
+lastsearch = 2024-07-11 22:53:21
 
 [chieutrelanlan.com]
 match = 0.0%%
@@ -72,9 +72,9 @@ title = CHIẾU TRÚC 1M8 HẠT VÀNG KHÔNG VIỀN TPHCM
 url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-1m8-hat-vang-khong-vien-tphcm-80.html
 
 [www.youtube.com]
-match = -28.6%%
-title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp CHIẾU SIÊU ...
-url = https://www.youtube.com/watch?v=FFV6Oqxq3Ds
+match = 20.0%%
+title = Review chiếu trúc hạt đen
+url = https://www.youtube.com/watch?v=XsFS_4Jr5lc
 
 [vongxepsaigon.vn]
 match = 3.6%%
@@ -82,9 +82,9 @@ title = Chiếu trúc không viền giá rẻ loại tốt cao cấp
 url = https://vongxepsaigon.vn/chieu-truc-khong-vien/
 
 [www.toangiaphuc.vn]
-match = 45.8%%
-title = Chiếu trúc hạt vàng 0.8m
-url = https://www.toangiaphuc.vn/chieu-truc-hat-vang-08m.html
+match = 53.6%%
+title = Chiếu trúc hạt nâu viền vải 1m8
+url = https://www.toangiaphuc.vn/chieu-truc-hat-nau-vien-vai-1m8.html
 
 [chieutrucxinh.weebly.com]
 match = -57.1%%
