--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-11 20:46:23
+lastsearch = 2024-07-11 23:19:46
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,9 +12,9 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -100.0%%
-title = Old man threw hands at HOA meeting : r/fuckHOA
-url = https://www.reddit.com/r/fuckHOA/comments/19743on/old_man_threw_hands_at_hoa_meeting/
+match = -35.3%%
+title = Can HOA come onto my property?
+url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
 match = -164.7%%
@@ -307,9 +307,9 @@ title =
 url = https://dessaules.com/blog/how-to-fight-hoa-fines
 
 [www.11alive.com]
-match = -123.5%%
-title = Georgia bill aims to help provide HOA oversight
-url = https://www.11alive.com/article/news/investigations/georgia-senator-proposes-new-office-hoa-disputes/85-98c61929-f403-4f18-8075-2cae85b01228
+match = -164.7%%
+title = HOA buys home through foreclosure for $3.24 - Atlanta
+url = https://www.11alive.com/article/news/investigations/the-reveal/hoa-battles-metro-atlanta/85-c33d4c4e-b9c4-46cb-8042-394ef1121399
 
 [www.justanswer.com]
 match = -170.6%%
@@ -415,4 +415,14 @@ url = https://hhlawoffice.com/basics-of-colorado-homeowners-association-hoa-law/
 match = -194.1%%
 title = Department of Justice | Homepage | United States Department ...
 url = https://www.justice.gov/
+
+[www.nolo.com]
+match = 0.0%%
+title = 
+url = https://www.nolo.com/legal-encyclopedia/georgia-hoa-foreclosures.html
+
+[www.southfloridalawpllc.com]
+match = -41.2%%
+title = HOA or Condo Association Disputes
+url = https://www.southfloridalawpllc.com/2021/03/10/hoa-or-condo-association-disputes/
 
