--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-07-11 20:20:59
+lastsearch = 2024-07-11 23:18:20
 
 [www.everonvn.vn]
-match = -38.7%%
-title = Bảng giá các kích thước đệm bông ép Everon vỏ gấm ...
-url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
+match = -22.6%%
+title = Bảng giá đệm bông ép Everon 1m8 (1.8m hay 180 x 200)
+url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m8.html
 
 [nemgiakho.com]
 match = 54.8%%
@@ -73,7 +73,7 @@ url = https://tongdailyeveron.com.vn/products/dem-new-extra-foam
 
 [shopee.vn]
 match = 6.5%%
-title = nệm everon giá tốt Tháng 6, 2024 | Mua ngay
+title = nệm everon giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=nệm everon
 
 [www.diepxuan.com]
