--- a/images/tam-trai-topper-everon/config.ini
+++ b/images/tam-trai-topper-everon/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon.html
 lastopen = 2024-06-07 01:44:00
 
 [search]
-lastsearch = 2024-07-11 22:16:12
+lastsearch = 2024-07-11 23:14:40
 
 [www.everonvn.vn]
 match = -27.3%%
@@ -57,9 +57,9 @@ title = Tấm Topper Xanh Lá Everon Lite ELM203-1 - K-Bedding
 url = https://kbedding.vn/product/tam-topper-xanh-la-everon-lite-elm203-1/
 
 [dailyeveron.vn]
-match = 59.1%%
-title = Tấm Trải Mát Cool Pad EVERON
-url = https://dailyeveron.vn/phu-kien-dem/tam-trai-mat-cool-pad-everon.html
+match = -45.5%%
+title = Tấm Trải Văn Phòng EVERON, tấm trải tiện ích Everon
+url = https://dailyeveron.vn/phu-kien-dem/tam-trai-van-phong-everon.html
 
 [everon.online]
 match = 68.2%%
@@ -70,4 +70,9 @@ url = https://everon.online/products/tam-trai-tien-ich-7
 match = -63.6%%
 title = TẤM TOPPER, CHỐNG THẤM Showroom Chăn Ga Gối ...
 url = https://everon.com.vn/tam-topper-chong-tham/
+
+[demxanh.com]
+match = -36.4%%
+title = Tấm Topper là gì cùng những thông tin về nó?
+url = https://demxanh.com/tam-topper-la-gi-cung-nhung-thong-tin-ve-no.html
 
