--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-07-11 22:49:24
+lastsearch = 2024-07-12 00:19:07
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -12,9 +12,9 @@ title = Ga Đa Năng Chống Thấm
 url = http://www.dreamland.vn/Ga-Da-Nang-Chong-Tham-i4422.html
 
 [demdreamland.vn]
-match = -45.2%%
-title = Lưu trữ 200×220 - Trang 14 trên 21 ... - Đệm Dreamland
-url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
+match = 32.3%%
+title = Ga Đa Năng Chống Thấm - demdreamland
+url = https://demdreamland.vn/ga-da-nang-chong-tham/
 
 [demxanh.com]
 match = -6.5%%
@@ -27,9 +27,9 @@ title = Chăn Tuyết Điều Hòa
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
-match = -29.0%%
-title = Chiếu điều hoà có chống thấm không? Sử dụng loại nào tốt
-url = https://demxinh.vn/tin-tuc/chieu-dieu-hoa-co-chong-tham-khong.html
+match = -35.5%%
+title = Đệm lò xo Canada Bencivenni (New) - bảo hành 15 năm
+url = https://demxinh.vn/dem-lo-xo-canada-bencivenni-new.html
 
 [dongahome.vn]
 match = 3.2%%
@@ -80,4 +80,9 @@ url = https://www.instagram.com/giagon_decor/p/CWQMHChpqt_/
 match = -144.4%%
 title = Dreamland
 url = https://www.youtube.com/shorts/tTOLm6vZlgM
+
+[www.tles.tyc.edu.tw]
+match = 9.7%%
+title = Bolsos playa grandes amazon [vM9c10]
+url = https://www.tles.tyc.edu.tw/instpage.php?=LoginId,LogoffReason,PunchTime&h=1200&r=0&url=https://xn----8sbema1b6ajjbl5i.xn--p1ai/2689143coer2yys7gaaakauyze5fe43y
 
