--- a/images/vo-goi-ke-warmdream-45x65-hq/config.ini
+++ b/images/vo-goi-ke-warmdream-45x65-hq/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
 lastopen = 2024-07-01 10:42:00
 
 [search]
-lastsearch = 2024-07-11 23:49:12
+lastsearch = 2024-07-12 00:18:45
 
 [www.diepxuan.com]
 match = 57.1%%
@@ -12,9 +12,9 @@ title = Vỏ gối kê WarmDream 45x65 HQ - Điệp Xuân
 url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
 
 [www.head-fi.org]
-match = -53.6%%
-title = New high-end headphone amps: Vorzuge VorzAMPpure ...
-url = https://www.head-fi.org/threads/new-high-end-headphone-amps-vorzuge-vorzamppure-and-vorzampduo-impressions-and-review-thread.607104/post-9387820
+match = -35.7%%
+title = Voarmaks Memory Foam Ear Pads for Hifiman Arya/ ...
+url = https://www.head-fi.org/threads/voarmaks-memory-foam-ear-pads-for-hifiman-arya-ananda-xs.969586/
 
 [www.youtube.com]
 match = -75.0%%
@@ -35,4 +35,9 @@ url = https://www.diyaudio.com/community/threads/naim-recap.93176/
 match = -7.1%%
 title = HiCap olive vs HiCap DR - Hi-Fi Corner
 url = https://community.naimaudio.com/t/hicap-olive-vs-hicap-dr/13804
+
+[www.nsxprime.com]
+match = 0.0%%
+title = Koyo Radiator thoughts
+url = https://www.nsxprime.com/threads/koyo-radiator-thoughts.170190/
 
