--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-11 22:14:23
+lastsearch = 2024-07-12 00:12:08
 
 [chanrathanhthuy.com]
 match = -6.5%%
@@ -12,14 +12,14 @@ title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
 url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
 
 [demxanh.com]
-match = -16.1%%
-title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
-url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
+match = 58.1%%
+title = Bộ chăn ga gối Hanvico LIVING - LV18
+url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html
 
 [songhongonline.vn]
-match = 50.0%%
-title = Bộ chăn ga gối SH_UC23 026
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc23-026
+match = 57.7%%
+title = Bộ chăn ga gối SH_UC22 018
+url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-uc22-018
 
 [changagoidemsonghong.com]
 match = 38.7%%
@@ -82,9 +82,9 @@ title = Bộ chăn ga gối Cotton sọc vuông hai lớp ZH6289
 url = https://flexhouse.vn/bọ-chan-ga-goi-cotton-soc-vuong-hai-lop-zh6289
 
 [changagoidemsonghong.online]
-match = 41.9%%
-title = Bộ chăn ga gối đệm cưới giá bao nhiêu?
-url = https://changagoidemsonghong.online/chan-ga-goi-dem-cuoi-gia-bao-nhieu.html
+match = -22.6%%
+title = Những lưu ý cần nhớ khi chọn chăn ga gối Sông Hồng cưới
+url = https://changagoidemsonghong.online/nhung-luu-y-can-nho-khi-chon-chan-ga-goi-song-hong-cuoi.html
 
 [www.facebook.com]
 match = -6.5%%
