--- a/images/bo-ga-chun-thhome-tencel-micro-140x200/config.ini
+++ b/images/bo-ga-chun-thhome-tencel-micro-140x200/config.ini
@@ -3,3 +3,6 @@ path = bo-ga-chun-thhome-tencel-micro-140x200
 url = https://www.diepxuan.com/bo-ga-chun-thhome-tencel-micro-140x200.html
 lastopen = 2024-07-12 00:10:47
 
+[search]
+lastsearch = 2024-07-12 00:13:25
+
