--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-11 22:33:42
+lastsearch = 2024-07-12 00:20:28
 
 [thamaulac.com.vn]
 match = -38.9%%
@@ -32,9 +32,9 @@ title = thảm ghép 60x60cm giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
 
 [vatlieulotsan.com]
-match = -83.3%%
-title = Thảm Xốp Mặt Nỉ - Kho Vật Liệu Trải Sàn TPHCM
-url = https://vatlieulotsan.com/danh-muc-san-pham/tham-xop/tham-xop-mat-ni/
+match = -66.7%%
+title = Thảm Xốp 60 × 60 Cm Trải Sàn Vân Gỗ Âu Lạc
+url = https://vatlieulotsan.com/product/tham-xop-60-x-60-cm-trai-san-van-go-au-lac/
 
 [thamtuonglam.vn]
 match = 21.4%%
