--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-11 17:40:24
+lastsearch = 2024-07-12 00:13:36
 
 [www.tui.co.uk]
-match = -153.3%%
-title = Cruise Calendar 2024 / 2025 | Marella Cruises
-url = https://www.tui.co.uk/cruise/cruise-calendar/
+match = -7.7%%
+title = Flight Status
+url = https://www.tui.co.uk/flight/arrivals-and-departures
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -190,4 +190,9 @@ url = https://www.cruisewinkel.nl/rederijen/tui-cruises/r-178.html
 match = -206.7%%
 title = Radley London: Designer Leather Handbags, Purses & ...
 url = https://www.radleylondon.com/
+
+[in.trip.com]
+match = -173.3%%
+title = TUI Airways Limited to Singapore Flight Ticket Booking
+url = https://in.trip.com/flights/airline-by/thomson-airways-limited-flight-to-sin/
 
