CI images update

--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-11 20:31:53
+lastsearch = 2024-07-12 00:31:21
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -62,9 +62,9 @@ title = LCK Spring 2024 - Liquipedia League of Legends Wiki
 url = https://liquipedia.net/leagueoflegends/LCK/2024/Spring
 
 [www.youtube.com]
-match = -21.7%%
-title = How to Use Korean Sentence Ending -네요
-url = https://www.youtube.com/watch?v=UFiSNO0znro
+match = -34.8%%
+title = Squid Game | Official Trailer | Netflix
+url = https://www.youtube.com/watch?v=oqxAJKy0ii4
 
 [www.asianstudies.org]
 match = 17.4%%
@@ -77,9 +77,9 @@ title = Ministry of Foreign Affairs, Republic of Korea
 url = https://www.mofa.go.kr/eng/index.do
 
 [koncertbooking.com]
-match = -134.8%%
-title = Tudjuk, mit olvasol idén nyáron #3 - Ülj ki a stégre és vedd ...
-url = https://koncertbooking.com/blog/tudjuk-mit-olvasol-iden-nyaron-3-ulj-ki-a-stegre-es-vedd-kezedbe-a-leginspiralobb-eletrajzokat
+match = -121.7%%
+title = Újít a TikTok: mostmár vízjel nélkül is letölthetők a videók
+url = https://koncertbooking.com/blog/ujit-a-tiktok-mostmar-vizjel-nelkul-is-letolthetok-a-videok
 
 [br.ign.com]
 match = -90.0%%
@@ -330,4 +330,9 @@ url = https://www.investing.com/news/stock-market-news/cryptorelated-stocks-drop
 match = -117.4%%
 title = Buy your video games cheaper for PC and consoles - Instant ...
 url = https://www.instant-gaming.com/en/
+
+[www.instagram.com]
+match = -21.7%%
+title = Fabiana Justus (@fabianajustus)
+url = https://www.instagram.com/fabianajustus/?hl=en
 
