CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-11 15:17:05
+lastsearch = 2024-07-12 00:48:38
 
 [scholar.google.com]
 match = -43.8%%
@@ -187,9 +187,9 @@ title = Kỳ 4: Rao tình trên mạng, bán dâm ngoài đời
 url = https://tuoitre.vn/soc-voi-cho-tinh-tren-mang-ky-4-rao-tinh-tren-mang-ban-dam-ngoai-doi-20240630224648457.htm
 
 [cafef.vn]
-match = -206.2%%
-title = Cao tốc qua Hà Tĩnh thi công 'uốn lượn' vì vướng đường ...
-url = https://cafef.vn/cao-toc-qua-ha-tinh-thi-cong-uon-luon-vi-vuong-duong-dien-nha-dan-chua-di-doi-188240608071020831.chn
+match = -212.5%%
+title = Hà Nội chi gần 1.500 tỷ đồng mở rộng QL3 trên địa bàn ...
+url = https://cafef.vn/ha-noi-chi-gan-1500-ty-dong-mo-rong-ql3-tren-dia-ban-huyen-soc-son-188240709132426069.chn
 
 [vov1.vov.gov.vn]
 match = -181.2%%
@@ -347,9 +347,9 @@ title = Phim 18+ có Cổ Thiên Lạc lập kỷ lục tại phòng vé Việt
 url = https://tin.skydoor.net/news/Phim_18_co_Co_Thien_Lac_lap_ky_luc_tai_phong_ve_Viet/7958912
 
 [laodong.vn]
-match = -212.5%%
-title = Sốt ruột chăm sóc con khi bệnh tiêu hóa gia tăng tại Cần Thơ
-url = https://laodong.vn/xa-hoi/sot-ruot-cham-soc-con-khi-benh-tieu-hoa-gia-tang-tai-can-tho-1357696.ldo
+match = -200.0%%
+title = Hình ảnh đoạn đường gần 7km ở Hà Nội sắp mở rộng lên ...
+url = https://laodong.vn/giao-thong/hinh-anh-doan-duong-gan-7km-o-ha-noi-sap-mo-rong-len-52m-1363883.ldo
 
 [mytour.vn]
 match = 0.0%%
