--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-07-11 22:30:25
+lastsearch = 2024-07-12 00:46:21
 
 [everonvn.com.vn]
-match = 7.4%%
-title = Bộ Artemis Tk Giảm Giá - Everon
-url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia
+match = -63.0%%
+title = Bảng Giá Bán Bộ Chăn Ga Gối Hàn Quốc Everon Epm 19062 ...
+url = https://everonvn.com.vn/everon/745/bo-everon-epm19062
 
 [everon.com.vn]
 match = 40.0%%
