--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-11 18:30:28
+lastsearch = 2024-07-12 00:53:14
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -27,9 +27,9 @@ title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
 url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
 
 [changagoidemsonghong.com]
-match = 37.0%%
-title = Chăn ga gối Home mã H17-048
-url = https://changagoidemsonghong.com/chan-ga-goi-home-h17-048
+match = 35.7%%
+title = Bộ chăn ga gối cao cấp mã UC22-018
+url = https://changagoidemsonghong.com/chan-ga-goi-uc018
 
 [flexhouse.vn]
 match = -3.6%%
