--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-07-12 00:19:07
+lastsearch = 2024-07-12 00:44:31
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -12,9 +12,9 @@ title = Ga Đa Năng Chống Thấm
 url = http://www.dreamland.vn/Ga-Da-Nang-Chong-Tham-i4422.html
 
 [demdreamland.vn]
-match = 32.3%%
-title = Ga Đa Năng Chống Thấm - demdreamland
-url = https://demdreamland.vn/ga-da-nang-chong-tham/
+match = -45.2%%
+title = Lưu trữ 200×220 - Trang 14 trên 21 ... - Đệm Dreamland
+url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 
 [demxanh.com]
 match = -6.5%%
@@ -27,9 +27,9 @@ title = Chăn Tuyết Điều Hòa
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
-match = -35.5%%
-title = Đệm lò xo Canada Bencivenni (New) - bảo hành 15 năm
-url = https://demxinh.vn/dem-lo-xo-canada-bencivenni-new.html
+match = -29.0%%
+title = Chiếu điều hoà có chống thấm không? Sử dụng loại nào tốt
+url = https://demxinh.vn/tin-tuc/chieu-dieu-hoa-co-chong-tham-khong.html
 
 [dongahome.vn]
 match = 3.2%%
