CI images update

--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-11 15:39:17
+lastsearch = 2024-07-12 01:22:42
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc thai đen14
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = -76.2%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = -28.6%%
+title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
+url = https://demxanh.com/bang-gia-chieu-truc-2018.html
 
 [www.lazada.vn]
 match = 14.3%%
@@ -117,9 +117,9 @@ title = Đồng bộ thi hành Luật Căn cước
 url = https://baolangson.vn/dong-bo-thi-hanh-luat-can-cuoc-5013468.html
 
 [baomoi.com]
-match = -4.8%%
-title = Du lịch Cửa Hội có những gì?
-url = https://baomoi.com/du-lich-cua-hoi-co-nhung-gi-c49533438.epi
+match = -123.8%%
+title = Cuộc thi 'Người đẹp Việt Bắc' sẽ diễn ra từ ngày 15/7 đến ...
+url = https://baomoi.com/cuoc-thi-nguoi-dep-viet-bac-se-dien-ra-tu-ngay-15-7-den-14-9-c49608375.epi
 
 [plo.vn]
 match = -128.6%%
