--- a/images/tham-nhung-bali-180x230/config.ini
+++ b/images/tham-nhung-bali-180x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-180x230.html
 lastopen = 2024-06-07 01:58:55
 
 [search]
-lastsearch = 2024-07-11 21:52:31
+lastsearch = 2024-07-12 01:18:41
 
 [demxanh.com]
 match = 0.0%%
@@ -85,4 +85,9 @@ url = https://www.instagram.com/greatestescape_bali/reel/C7l4aPdSj3X/?locale=es_
 match = -17.4%%
 title = 797 регион это откуда [vespjE]
 url = https://www.tles.tyc.edu.tw/instpage.php?=LoginId,LogoffReason,PunchTime&h=1200&r=0&url=https://xn--80adyaqv.xn--p1ai/5813267pam4r3v53xy275comafe88y
+
+[www.crazytravelista.com]
+match = -121.7%%
+title = Cute Places to Stay in Bali with Amazing Views for Under ...
+url = https://www.crazytravelista.com/cute-places-to-stay-in-bali/
 
