--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-12 00:18:12
+lastsearch = 2024-07-12 01:23:49
 
 [xoptraisan.info]
 match = -64.7%%
@@ -37,9 +37,9 @@ title = Thảm Trải Lót Sàn, Sàn Nhựa Giả Gỗ, Thảm Nhựa TPHCM
 url = https://trieuchau.com/
 
 [www.facebook.com]
-match = -23.5%%
-title = Thảm Xốp Ghép Trải Sàn | Hanoi
-url = https://www.facebook.com/xoptraisan/
+match = 0.0%%
+title = THẢM XỐP TRẢI SÀN | Hanoi
+url = https://www.facebook.com/xoplotsan/
 
 [thamsami.com]
 match = -76.5%%
@@ -67,9 +67,9 @@ title = Thảm nỉ trải sàn ghép miếng thương hiệu Tường Lâm
 url = https://demhong.vn/tham-ni-trai-san-ghep-mieng/
 
 [shopee.vn]
-match = -47.1%%
-title = 1 Tấm THẢM XỐP GHÉP VÂN GỖ 60x60cm/tấm
-url = https://shopee.vn/1-Tấm-THẢM-XỐP-GHÉP-VÂN-GỖ-60x60cm-tấm-i.83850460.1824299401
+match = -135.3%%
+title = [Trợ giá] Thảm xốp vân gỗ Cao cấp 1 bộ 6 miếng 60s60cm
+url = https://shopee.vn/product/74195497/1842818990?gsht=tvsIQ01vyExHjKvj
 
 [thamtraisan.info]
 match = -76.5%%
