CI images update

--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-07-11 22:45:06
+lastsearch = 2024-07-12 01:35:47
 
 [www.bible.com]
-match = -157.1%%
-title = EZEKIELA 16 | MIZOVBSI Bible | YouVersion
-url = https://www.bible.com/bible/253/EZK.16.MIZOVBSI
+match = -128.6%%
+title = MARKA 16 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/MRK.16.MIZCLBSI
 
 [tiki.vn]
 match = -171.4%%
@@ -77,9 +77,9 @@ title = Prom Krasimira - part 1
 url = https://www.youtube.com/watch?v=hgl2bPLMEPw
 
 [www.instagram.com]
-match = -257.1%%
-title = Jamie Oliver (@jamieoliver) • Instagram photos and videos
-url = https://www.instagram.com/jamieoliver/?hl=en
+match = -250.0%%
+title = Gisele Bündchen (@gisele) • Instagram photos and videos
+url = https://www.instagram.com/gisele/?hl=en
 
 [en.wikipedia.org]
 match = -66.7%%
