--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-12 00:53:14
+lastsearch = 2024-07-12 01:42:20
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -27,9 +27,9 @@ title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
 url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
 
 [changagoidemsonghong.com]
-match = 35.7%%
-title = Bộ chăn ga gối cao cấp mã UC22-018
-url = https://changagoidemsonghong.com/chan-ga-goi-uc018
+match = 37.0%%
+title = Chăn ga gối Home mã H17-048
+url = https://changagoidemsonghong.com/chan-ga-goi-home-h17-048
 
 [flexhouse.vn]
 match = -3.6%%
@@ -42,9 +42,9 @@ title = Ruột Chăn, Ruột Gối Ngủ Cao Cấp, Giá Rẻ - JYSK.vn
 url = https://jysk.vn/ruot-chan-goi
 
 [songhong.info]
-match = 17.9%%
-title = Chăn ga gối Home mã H17-049 Sale 40%%
-url = https://songhong.info/chan-ga-goi-home-h17-049
+match = 14.3%%
+title = Chăn ga gối cao cấp Urban mã UC23-039
+url = https://songhong.info/chan-ga-goi-uc039
 
 [cuahangchangagoidem.com]
 match = 3.6%%
