--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-07-11 23:46:41
+lastsearch = 2024-07-12 01:37:58
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -27,9 +27,9 @@ title = RecipRocal clubs
 url = https://www.ucco.com/files/231128-reciprocalClubs-List-p29.pdf
 
 [www.naiglobal.com]
-match = -137.5%%
-title = Listings
-url = https://www.naiglobal.com/listings/
+match = -109.1%%
+title = Properties - North America Listings Powered by BuildOut
+url = https://www.naiglobal.com/sale-lease-properties-buildout/
 
 [www.acswasc.org]
 match = 0.0%%
@@ -600,4 +600,9 @@ url = https://stanford_ftp.sidearmsports.com/old_site/pdf/m-basebl/03mediaguide.
 match = -40.9%%
 title = DEFENSE TECHNICAl INFORMATION CENTER
 url = https://www.esd.whs.mil/Portals/54/Documents/FOID/Reading Room/Other/15-F-0483_DOC_04_final_DOC_ODNA_Institutional_Economic_and_Organizational_Basis_of_Military_Capability.pdf
+
+[www.mayo.edu]
+match = -13.6%%
+title = Cancer Treatment Clinical Trials
+url = https://www.mayo.edu/research/clinical-trials/tests-procedures/cancer-treatment/
 
