--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-11 19:28:23
+lastsearch = 2024-07-12 01:35:27
 
 [www.walmart.com]
 match = -181.2%%
@@ -13,8 +13,8 @@ url = https://www.walmart.com/ip/Zury-Natural-Dream-Feel-Look-Ocean-Wave-18-SOM-
 
 [www.tiktok.com]
 match = -243.8%%
-title = #beautytok #fauxfiltercolorcorrector #colorcorrection @Huda ...
-url = https://www.tiktok.com/@hudabeauty/video/7349654926324419886
+title = How I like to contour my lips #hudabeauty #foryou #beautytok ...
+url = https://www.tiktok.com/@hudabeauty/video/7267624422679334187
 
 [www.diepxuan.com]
 match = -150.0%%
@@ -62,9 +62,9 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.instagram.com]
-match = -193.8%%
-title = Meliá Hotels & Resorts | It's time to enjoy a warm dream ...
-url = https://www.instagram.com/meliahtlresorts/p/CsQkNaANnaw/
+match = 18.8%%
+title = Winter | 𝖆𝖕𝖗𝖎𝖑 18
+url = https://www.instagram.com/daydreamingwinter/reel/C5m8xjlOPBA/
 
 [demxanh.com]
 match = -156.2%%
