CI images update

--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-07-11 22:39:11
+lastsearch = 2024-07-12 01:44:21
 
 [silverwow.net]
 match = -255.6%%
@@ -242,9 +242,9 @@ title =
 url = https://www.usgs.gov/faqs/what-sterling-silver
 
 [www.youtube.com]
-match = -411.1%%
-title = MAKING A 3 KILO CUBAN LINK CHAIN IN UNDER 24 HOURS!!
-url = https://www.youtube.com/watch?v=vNwm5zRvpFs
+match = -477.8%%
+title = Making A Cuban Chain | Handmade Silver Chain | Making of ...
+url = https://www.youtube.com/watch?v=DklG_07rwFk
 
 [www.qevon.com]
 match = 0.0%%
