--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-12 01:21:15
+lastsearch = 2024-07-12 01:49:49
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -355,4 +355,9 @@ url = https://www.hanhphuchospital.com/phong-kham-ve-tinh/phong-kham-quoc-te-han
 match = -180.0%%
 title = Bảng Xếp Hạng Bóng Đá Mới Nhất, BXH Bóng Đá 24/7
 url = https://www.castelsanpietroromano.net/bang-xep-hang-bong-da/
+
+[www.reddit.com]
+match = -206.7%%
+title = Bungie, can we please have this ship model with no ...
+url = https://www.reddit.com/r/destiny2/comments/10e03el/bungie_can_we_please_have_this_ship_model_with_no/
 
