--- a/images/nem-diamond-re-160x200x09/config.ini
+++ b/images/nem-diamond-re-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-diamond-re-160x200x09.html
 lastopen = 2024-06-10 12:36:25
 
 [search]
-lastsearch = 2024-07-12 00:14:43
+lastsearch = 2024-07-12 01:44:32
 
 [www.reddit.com]
 match = -60.0%%
@@ -50,4 +50,14 @@ url = https://www.vinylengine.com/turntable_forum/viewtopic.php?t=126365&start=9
 match = 0.0%%
 title = Blue Diamond pans
 url = https://bluediamondshopping.com/
+
+[thefiringline.com]
+match = -48.0%%
+title = Thinking about buying a Beretta 9mm [Archive]
+url = https://thefiringline.com/forums/archive/index.php?t-208217.html
+
+[www.sciencemadness.org]
+match = -20.0%%
+title = aluminium powder Eckart 5413H and 5481H
+url = https://www.sciencemadness.org/whisper/viewthread.php?tid=65222
 
