--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-07-12 01:17:14
+lastsearch = 2024-07-12 01:45:39
 
 [demxanh.com]
-match = 26.1%%
-title = Chăn lông 3kg mã 02 - Hà Nội
-url = https://demxanh.com/chan-long-3kg-ma-02.html
+match = 26.3%%
+title = Chăn lông 5kg mã 02
+url = https://demxanh.com/chan-long-5kg-ma-02.html
 
 [shopee.vn]
 match = 43.5%%
@@ -22,9 +22,9 @@ title = Điệp Xuân Chăn KQ không sóng 5kg
 url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html
 
 [thegioidemonline.com]
-match = 39.1%%
-title = Chăn măng lông KQ loại 7kg
-url = https://thegioidemonline.com/chan-bang-long-loai-7kg.html
+match = 45.0%%
+title = Chăn lông KQ cao cấp
+url = https://thegioidemonline.com/chan-long-kq-ma-01.html
 
 [www.youtube.com]
 match = -87.0%%
@@ -112,9 +112,9 @@ title = Video help, tips, and techniques
 url = https://archive.org/help/video.php?identifier=1944-arsenic-and-old-lace-este-mundo-e-um-hospicio-frank-capra-legendado&ht=480&wd=640&url=https://xn--80apbkdj.xn--p1ai/59682419zfe43a
 
 [www.tiktok.com]
-match = -31.2%%
-title = Addinsonin Tauti
-url = https://www.tiktok.com/discover/addinsonin-tauti
+match = -20.0%%
+title = Park I Yul Infj
+url = https://www.tiktok.com/discover/park-i-yul-infj
 
 [usth.edu.vn]
 match = -78.3%%
