--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-07-12 01:45:39
+lastsearch = 2024-07-12 02:25:25
 
 [demxanh.com]
-match = 26.3%%
-title = Chăn lông 5kg mã 02
-url = https://demxanh.com/chan-long-5kg-ma-02.html
+match = 26.1%%
+title = Chăn lông 3kg mã 02 - Hà Nội
+url = https://demxanh.com/chan-long-3kg-ma-02.html
 
 [shopee.vn]
 match = 43.5%%
@@ -112,9 +112,9 @@ title = Video help, tips, and techniques
 url = https://archive.org/help/video.php?identifier=1944-arsenic-and-old-lace-este-mundo-e-um-hospicio-frank-capra-legendado&ht=480&wd=640&url=https://xn--80apbkdj.xn--p1ai/59682419zfe43a
 
 [www.tiktok.com]
-match = -20.0%%
-title = Park I Yul Infj
-url = https://www.tiktok.com/discover/park-i-yul-infj
+match = -31.2%%
+title = Addinsonin Tauti
+url = https://www.tiktok.com/discover/addinsonin-tauti
 
 [usth.edu.vn]
 match = -78.3%%
@@ -185,4 +185,9 @@ url = http://sonnptnt.tuyenquang.gov.vn/media/files/vanban/2212-HD-SNN-nuoi-bo.p
 match = 0.0%%
 title = Secured Home of resttime.vn
 url = https://resttime.vn/
+
+[www.chotot.com]
+match = -87.0%%
+title = Mua Bán Gà Chọi Khỏe Đẹp, Gà Đá Cựa Chắc, Gà Nòi Giá ...
+url = https://www.chotot.com/mua-ban-ga-choi-sdcp6
 
