--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-11 22:15:30
+lastsearch = 2024-07-12 02:28:53
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -52,9 +52,9 @@ title = South China Sea
 url = https://en.wikipedia.org/wiki/South_China_Sea
 
 [books.google.com]
-match = -104.3%%
-title = A Household Atlas of the World: Containing Large Scale ...
-url = https://books.google.com/books?id=ne8wAQAAMAAJ&pg=PA138&lpg=PA138&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=-8w14qMJYt&sig=ACfU3U3CJVxPaxZZiR5irJKLJlJUKrsEjA&hl=en&sa=X&ved=2ahUKEwiKpa_eo5-HAxX8F1kFHR58DagQ6AF6BAgeEAM
+match = -43.5%%
+title = Vietnam - Page 187 - Google Books Result
+url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYpZacN_K&sig=ACfU3U2zcjBoNX3rgNU2Fb-7RNklXcGFWQ&hl=en&sa=X&ved=2ahUKEwjh5NKv3J-HAxWjtokEHcpMC1oQ6AF6BAghEAM
 
 [www.travelweekly.com]
 match = -87.0%%
