--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-11 15:34:33
+lastsearch = 2024-07-12 02:25:49
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = nhà cái uy tín ♐️【WW88.game】Casino Online
 url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
-match = -162.5%%
-title = DÂN CA TRỮ TÌNH MIỀN TÂY HAY ĐẮM ĐUỐI -LK Nhạc Dân ...
-url = https://www.youtube.com/watch?v=YprMSuMId3Q
+match = -200.0%%
+title = Vietnamese Baguette Recipe - BÁNH MÌ VIỆT NAM - KNEAD ...
+url = https://www.youtube.com/watch?v=yzQ6rCK8pJw
 
 [saigontourist.edu.vn]
 match = -162.5%%
