--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-11 21:46:48
+lastsearch = 2024-07-12 02:24:21
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -92,9 +92,9 @@ title = Khám phá làng nghề dệt chiếu lác ở Long An
 url = https://baomoi.com/kham-pha-lang-nghe-det-chieu-lac-o-long-an-c48038158.epi
 
 [books.google.com]
-match = -212.5%%
-title = 20 Tác Phẩm Ôn Thi Vào Lớp 10 Môn Văn - Google Books Result
-url = https://books.google.com/books?id=7-4EEQAAQBAJ&pg=PT18&lpg=PT18&dq=chieu+lac+soc+10&source=bl&ots=E377jBLN9C&sig=ACfU3U0LtAie-95hP2NOGbf72-h3pIq6-A&hl=en&sa=X&ved=2ahUKEwjpzqv6pZ2HAxV-j4kEHWT9CnoQ6AF6BAggEAM
+match = -231.2%%
+title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
+url = https://books.google.com/books?id=QLDaAAAAMAAJ&pg=RA4-PA7&lpg=RA4-PA7&dq=chieu+lac+soc+10&source=bl&ots=1UvautqhCh&sig=ACfU3U12dwGRU-cVnu26xXgDVd6lgTU95g&hl=en&sa=X&ved=2ahUKEwiVv_Ct25-HAxUGLtAFHVNyA2MQ6AF6BAggEAM
 
 [thanglong.chinhphu.vn]
 match = -156.2%%
